[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/scenes/inventor/machine_gallery.gd" id="1"]

[node name="MachineGallery" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 48)

[node name="BackButton" type="Button" parent="VBoxContainer/TitleBar"]
layout_mode = 2
text = "< Back"

[node name="TitleLabel" type="Label" parent="VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "My Machines"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)

[node name="EmptyLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "No saved machines yet!"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.4, 0.5, 0.6, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 4
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
